--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "json-loader": "^0.5.1",
     "jstransformer-marked": "0.0.2",
     "marked": "^0.3.3",
-    "movement-ui-kit": "git+https://github.com/movementventures/ui-kit.git",
+    "movement-ui-kit": "git+https://github.com/movementventures/ui-kit.git#3a8b9558e4b97c91b153c42158bb33dcaf71ad3b",
     "onus": "^0.2.0",
     "onus-loader": "^0.2.0",
     "onus-style": "^0.2.0",
